2006-09-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: missing bugs.texi from release
	* Makefile.am: changes to pass distcheck
	* am/release.am: changes to pass distcheck
	* configure.ac: changes to pass distcheck

2006-08-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/todo.texi: added todo file
	* doc/manual/bugs.texi: added bugs file

2006-08-25  Brian Bidulock  <bidulock@openss7.org>

        * am/release.am: added new release control file
	* doc/manual/descrip.texi: added short description file

2006-08-24  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/strss7.texi: some improvements to documentation
	* Makefile.am: automating release files
	* doc/manual/Makefile.am: automating release files
	* doc/manual/libxnet.texi: automating release files
	* doc/manual/prerequisites.texi: automating release files
	* doc/manual/releases.texi: automating release files
	* doc/manual/strss7.texi: automating release files
	* doc/manual/texi/quick.texi: automating release files
	* doc/projects/Makefile.am: automating release files
	* doc/projects/hlr.texi: automating release files
	* doc/projects/lab.texi: automating release files
	* doc/projects/voip.texi: automating release files
	* doc/specs/cci/Makefile.am: automating release files
	* doc/specs/cci/cci.texi: automating release files
	* doc/specs/dlpi/Makefile.am: automating release files
	* doc/specs/dlpi/dlpi.texi: automating release files
	* doc/specs/mapi/Makefile.am: automating release files
	* doc/specs/mapi/mapi.texi: automating release files
	* doc/specs/npi/Makefile.am: automating release files
	* doc/specs/npi/npi.texi: automating release files
	* doc/specs/tci/Makefile.am: automating release files
	* doc/specs/tci/tci.texi: automating release files
	* doc/specs/tpi/Makefile.am: automating release files
	* doc/specs/tpi/tpi.texi: automating release files
	* doc/specs/tpi/tpi_tcap.texi: automating release files
	* doc/specs/tri/Makefile.am: automating release files