@@ -99,7 +99,7 @@ AC_PROG_MAKE_SET
 AC_PROG_YACC
 AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
-AM_GNU_GETTEXT_VERSION(0.14.5)
+AM_GNU_GETTEXT_VERSION([0.14.5])
 
 dnl
 dnl Checks for libraries.
@@ -180,7 +180,6 @@ AC_CONFIG_FILES([Makefile
 		 doc/specs/mapi/Makefile
 		 doc/specs/cci/Makefile
 		 m4/Makefile
-		 intl/Makefile
 		 po/Makefile.in
 		 src/modules/inet/lis.conf
 		 src/modules/sctp/lis.conf])
