@@ -240,10 +240,10 @@ if RPM_BUILD_USER
 
 SUBDIRS = src . tests
 
-## if PKG_BUILD_ARCH
-## SUBDIRS += intl m4 po
-## CLEANFILES += po/stamp-po
-## endif
+if PKG_BUILD_ARCH
+SUBDIRS += intl m4 po
+CLEANFILES += po/stamp-po
+endif
 
 SUBDIRS += . tests
 
